[project]
name = "nv-local-gpu-verifier"
version = "2.6.4"
description = "A Python-based tool that validates GPU measurements by comparing GPU runtime measurements with authenticated golden measurements"
requires-python = ">=3.7"
dependencies = [
    "asn1==2.7.0",
    "cryptography==43.0.1",
    "ecdsa==0.18.0",
    "lxml>=4.9.1",
    "nvidia-ml-py==12.550.52",
    "pyjwt==2.7.0",
    "pyopenssl==24.2.1",
    "signxml==3.2.0",
    "xmlschema==2.2.3",
]
authors = [{ name = "NVIDIA" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./src/verifier"]